# grimheart

./: .gitignore  .ocamlformat  .ocamlinit  LICENSE  Makefile  README.md  README.org  dune-project  grimheart_ast.opam  grimheart_core.opam  sulfur.opam  sulfur_ast.opam  sulfur_core.opam
.github/workflows/: build.yml
grimheart-ast/: Expr.ml  Expr.mli  Type.ml  Type.mli  dune
grimheart-core/: Grimheart_core.ml  dune
grimheart-core/environment/: Grimheart_core_environment.ml  Grimheart_core_environment.mli  Grimheart_environment.ml  Grimheart_environment.mli  dune
grimheart-core/errors/: Grimheart_core_errors.ml  Grimheart_errors.ml  dune
grimheart-core/type_checker/: Context.ml  Context.mli  Environment.ml  Fresh.ml  Kinds.ml  Kinds.mli  Substitutions.ml  Types.ml  Types.mli  dune
grimheart-utils/: Map.ml  Map.mli  dune
lib/: Context.ml  Context.mli  Grammar.mly  Infer.ml  Infer.mli  Lexer.mll  Parser.ml  Sulfur.ml  Syntax.ml  Syntax.mli  dune
src/: Context.ml  Context.mli  Expr.ml  Expr.mli  Infer.ml  Infer.mli  Literal.ml  Log.ml  Type.ml  dune
sulfur-ast/: Expr.ml  Type.ml  dune
sulfur-core/: Context.ml  Context.mli  Errors.ml  Expr.ml  Expr.mli  Infer.ml  Infer.mli  Literal.ml  Sulfur_core.ml  Type.mli  dune
sulfur-core/errors/: Sulfur_errors.ml  dune
sulfur-core/type_checker/: Context.ml  Context.mli  Infer.ml  Infer.mli  Kinds.ml  Kinds.mli  Log.ml  Types.ml  Types.mli  dune
tests/core/: core.ml  dune
tests/core/type_checker/: dune  kinds_suite.ml  type_checker.ml  types_suite.ml
