(library
 (name grimheart_core_type_checker)
 (public_name grimheart_core.type_checker)
 (libraries
  core_kernel
  dolog
  grimheart_ast
  grimheart_core.environment
  grimheart_core.errors
  grimheart_core.utils)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.std ppx_sexp_conv)))
